# tempproject

./: .Makefile.am.swp  .configure.ac.swp  .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  daemon.c  daemon.h  dht22.c  enviroment.sql  mysql.c
autom4te.cache/: output.1  requests  traces.0  traces.1
