AC_INIT([temp], [0.0.1], [suphanut@gmail.com])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([mysql.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])

# Enable "automake" to simplify creating makefiles:
AM_INIT_AUTOMAKE([1.11 -Wall -Werror])
AC_CONFIG_FILES([Makefile])



# Look for a C compiler:
AC_PROG_CC

AC_OUTPUT
